--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/clerk-js": "^5.67.5",
     "@clerk/nextjs": "^6.19.4",
     "@clerk/themes": "^2.2.45",
     "@prisma/client": "^6.8.2",
